# scanner

./: .gitignore  CMakeLists.txt  QR_APP_003_BGA65_HModuleFC_QM3503_V1.2.14.sig  QR_APP_003_BGA65_HModuleFC_QM3503_V1.2.16.sig  README.md  README_ru.md  centos7-x86.Dockerfile  conan_commands.txt  conanfile.txt  debian11-i386.Dockerfile  debian11-x64.Dockerfile  debian12-x64.Dockerfile  dockerfile  install.sh  private.pem  Аннотация.docx  Реферат.docx
Firmwares/: QR_APP_003_BGA65_HModuleFC_QM3503_V1.2.0.sig  QR_APP_003_BGA65_HModuleFC_QM3503_V1.2.1.sig  QR_APP_003_BGA65_HModuleFC_QM3503_V1.2.4.sig
build_centos_x86/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FindBZip2.cmake  FindBoost.cmake  FindZLIB.cmake  Makefile  activate.ps1  activate.sh  cmake_install.cmake  compile_commands.json  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  environment.ps1.env  environment.sh.env  graph_info.json
build_centos_x86/src/hidapi/: Makefile  cmake_install.cmake
build_centos_x86/src/hidapi/src/: Makefile  cmake_install.cmake
build_centos_x86/src/hidapi/src/libusb/: Makefile  cmake_install.cmake
build_centos_x86/src/hidapi/src/linux/: Makefile  cmake_install.cmake
build_centos_x86/src/utfcpp/: Makefile  cmake_install.cmake  utf8cppConfigVersion.cmake
cmake/Modules/: Findlibudev.cmake  Findlibusb.cmake
conan/: remotes.json  settings.yml
conan_profiles/linux/centos7/: linux_x86_64_build  linux_x86_64_host  linux_x86_build  linux_x86_host
conan_profiles/linux/debian11/: linux_x86_64_build  linux_x86_build
conan_profiles/linux/debian12/: linux_x86_64_build
conan_profiles/win10/: win10_build
src/: CppConsoleTable.hpp  commands.cpp  commands.h  commands_sequencies.cpp  commands_sequencies.h  config1_data.h  config2_data.h  config3_data.h  converters.cpp  converters.h  error_handler.cpp  error_handler.h  handler.h  logger.cpp  logger.h  main.cpp  menu.cpp  menu.h  phrases.h  print.cpp  print.h  reconnect.cpp  reconnect.h  utility.cpp  utility.h
src/configure/: en_US.h.in  ru_RU.h.in
src/dependencies/: libattr.so.1  libcap.so.2  libdw.so.1  libelf.so.1  libudev.so.1
src/enums/: commands.h  conf-1.enums.h  conf-2.enums.h  conf-3.enums.h  function_name.h
src/include/: fwdlinterface.h
src/win10/: libfwdownload.lib
